--- a/scss/lessons.scss
+++ b/scss/lessons.scss
@@ -1,7 +1,9 @@
+// Required Bootstrap files
 @import "../bootstrap/source/scss/functions";
 @import "../bootstrap/source/scss/variables";
 @import "../bootstrap/source/scss/mixins";
 
+// Variable overrides
 $body-bg:       #333;
 $body-color:    #fff;
 
@@ -19,7 +21,9 @@ $accordion-border-width: 0;
 $accordion-icon-color:          $accordion-color;
 $accordion-icon-active-color:   $accordion-color;
 
+// Icon color depends on 'fill' attribute in url arguments
 $accordion-button-icon:         url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#fff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
 $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#fff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
 
+// Import required for above changes to take effect
 @import "../bootstrap/source/scss/bootstrap.scss";
