--- a/scss/syntax.scss
+++ b/scss/syntax.scss
@@ -1,9 +1,11 @@
 body {
     background-color: #333;
     color: white;
+    padding: 1rem 0;
 }
 
 h2 {
+    margin-top: 2rem;
     margin-bottom: 1rem;
     text-decoration: underline;
 }
