CAdd navbar.scss to every scss file with @use

--- a/scss/lessons.scss
+++ b/scss/lessons.scss
@@ -1,3 +1,5 @@
+@use "navbar";
+
 // Required Bootstrap files
 @import "../bootstrap/source/scss/functions";
 @import "../bootstrap/source/scss/variables";
