--- a/css/lessons.css
+++ b/css/lessons.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+.navbar {
+  background-color: #111;
+}
+
 /*!
  * Bootstrap v5.0.0-beta3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
