--- a/css/index.css
+++ b/css/index.css
@@ -7,4 +7,18 @@ body {
   color: white;
 }
 
+#jumbo-header {
+  padding: 3em;
+  background-image: url("https://picsum.photos/1920");
+  background-size: cover;
+  background-position: center;
+  background-color: #000a !important;
+}
+
+#jumbo-header .container {
+  padding: 3em;
+  background-color: #000a;
+  border-radius: 1em;
+}
+
 /*# sourceMappingURL=index.css.map */
