--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,6 +3,7 @@
 body {
     background-color: #333;
     color: white;
+    padding-bottom: 2em;
 }
 
 #jumbo-header {
@@ -11,11 +12,28 @@ body {
     background-size: cover;
     background-position: center;
     background-color: #000a !important;
+    margin-bottom: 2em;
+
+    .container {
+        padding: 3em;
+        background-color: #000a;
+        border-radius: 1em;
+    }
 }
 
-#jumbo-header .container {
-    padding: 3em;
-    background-color: #000a;
-    border-radius: 1em;
+#timeline {
+    #q1 { background-color: skyblue; }
+    #q2 { background-color: palevioletred; }
+    #q3 { background-color: lightgreen; }
+    #q4 { background-color: palegoldenrod; }
+    
+    .card {
+        margin: 0.75em auto;
 
+        h3 {
+            color: #000;
+            text-align: center;
+            margin: 1em;
+        }
+    }
 }
