--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,10 @@ body {
   padding-bottom: 2em;
 }
 
+.card {
+  margin: 0.75em auto;
+}
+
 #jumbo-header {
   padding: 3em;
   background-size: cover;
@@ -33,10 +37,7 @@ body {
 #timeline #q4 {
   background-color: palegoldenrod;
 }
-#timeline .card {
-  margin: 0.75em auto;
-}
-#timeline .card h3 {
+#timeline h3 {
   color: #000;
   text-align: center;
   margin: 1em;
