Update photo card styling

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -25,6 +25,8 @@ body {
 }
 
 #timeline {
+    margin-bottom: 2em;
+    
     #q1 { background-color: skyblue; }
     #q2 { background-color: palevioletred; }
     #q3 { background-color: lightgreen; }
