--- a/scss/lessons.scss
+++ b/scss/lessons.scss
@@ -33,6 +33,9 @@ $accordion-button-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3
 // Other custom SCSS
 h1 {
     text-decoration: underline;
-    padding-top: 2rem;
     padding-bottom: 1rem;
+}
+
+.row {
+    margin: 2em auto;
 }
