--- a/scss/index.scss
+++ b/scss/index.scss
@@ -15,7 +15,7 @@ body {
     background-size: cover;
     background-position: center;
     background-color: #000a !important;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
 
     .container {
         padding: 3em;
@@ -24,9 +24,11 @@ body {
     }
 }
 
-#timeline {
+.section {
     margin-bottom: 2em;
-    
+}
+
+#timeline {
     #q1 { background-color: skyblue; }
     #q2 { background-color: palevioletred; }
     #q3 { background-color: lightgreen; }
