--- a/css/lessons.css
+++ b/css/lessons.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 .navbar {
   background-color: #111;
 }
